[package]
name = "flow-rust-sdk"
version = "4.0.1"
edition = "2018"
license = "Apache-2.0 OR MIT"
description = """
Flow-Rust-SDK
utilizes the Flow gRPC AccessAPI to make requests on the flow blockchain.
"""
repository = "https://github.com/MarshallBelles/flow-rust-sdk"
readme = "README.md"


[dependencies]
anyhow = "1.0.55"
tonic = "0.5"
prost = "0.8"
hex = "0.4.3"
http = "0.2.6"
rlp = { version = "0.5.1", optional = true }
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6.3"
p256_flow = { version = "1.0.0", features = ["ecdsa"], optional = true }
tokio = { version = "1.11.0", features = ["full"] }
serde_json = "1.0.68"

[build-dependencies]
tonic-build = "0.5"

[features]
default = []
p256_flow = ["dep:p256_flow", "rlp"]
